Closed
Bug 1024130
Opened 11 years ago
Closed 11 years ago
Address book sorting not sticky
Categories
(MailNews Core :: Address Book, defect)
Tracking
(thunderbird32 fixed, seamonkey2.29 affected, seamonkey2.30+ fixed, seamonkey2.31 fixed, seamonkey2.32 fixed)
RESOLVED
FIXED
Thunderbird 33.0
People
(Reporter: sfhowes, Assigned: aceman)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
7.05 KB,
patch
|
standard8
:
review+
standard8
:
approval-comm-beta+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; rv:31.0) Gecko/20100101 Firefox/31.0 (Beta/Release)
Build ID: 20140609004001
Steps to reproduce:
Launch Earlybird in safe mode, open Address Book, select an address book, and note that contacts are displayed in random order, even though View/Sort by has Name and Ascending selected. Clicking the Name column button only reverses the order, but if any other column button is clicked, and then the Name column button is clicked, the list is displayed with the correct sorting by Name. However, the display is not retained if Address Book is closed and reopened.
User Agent: Mozilla/5.0 (Windows NT 6.1; rv:32.0) Gecko/20100101 Thunderbird/32.0a2
Build ID: 20140611004005
Confirming.
Possible regression from bug 177206.
Maybe we hit the line http://mxr.mozilla.org/comm-central/source/mailnews/addrbook/src/nsAbView.cpp#451 and it does nothing now.
Assignee: nobody → acelists
Blocks: 177206
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression
When opening the Addressbook window, we call SetView() 3 times which does reload and resort all cards. That looks inefficient but I can't fix that right now.
But I think I have found the problem why bug 177206 regressed this.
Status: NEW → ASSIGNED
OS: Windows 7 → All
Hardware: x86 → All
This should do it.
Attachment #8440301 -
Flags: review?(standard8)
Attachment #8440301 -
Flags: review?(mconley)
Comment 4•11 years ago
|
||
Comment on attachment 8440301 [details] [diff] [review]
patch
Review of attachment 8440301 [details] [diff] [review]:
-----------------------------------------------------------------
Looks good, r=Standard8
Attachment #8440301 -
Flags: review?(standard8)
Attachment #8440301 -
Flags: review?(mconley)
Attachment #8440301 -
Flags: review+
Comment 6•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 33.0
Is there a chance this fix could be back ported to V31 as that is the release version?
The change that caused this was only landed in TB32 so there should be no need to backport to TB31. If you see any problem resembling this one that that is a different bug.
(In reply to :aceman from comment #8)
> The change that caused this was only landed in TB32 so there should be no
> need to backport to TB31. If you see any problem resembling this one that
> that is a different bug.
Sorry about that, I missed it first time round. Followed a link from the support forum where TB31 was the version under discussion and read less than I should have.
Comment 10•11 years ago
|
||
(In reply to :aceman from comment #8)
> The change that caused this was only landed in TB32 so there should be no
> need to backport to TB31. If you see any problem resembling this one that
> that is a different bug.
Does that mean we should ask for approval to land on TB32 then?
Flags: needinfo?(acelists)
| Assignee | ||
Comment 11•11 years ago
|
||
If anybody needs it on TB32 (which is not released) then you can surely request the approval. Or if you need it for a SM release.
Flags: needinfo?(acelists)
Comment 12•11 years ago
|
||
Comment on attachment 8440301 [details] [diff] [review]
patch
[Approval Request Comment]
Regression caused by (bug #): bug 177206
User impact if declined: Address book sorting will not stick for SM release based on mail core 32.
Testing completed (on c-c, etc.): on c-c and c-a
Risk to taking this patch (and alternatives if risky): Low risk
Attachment #8440301 -
Flags: approval-comm-beta?
status-seamonkey2.29:
--- → unaffected
status-seamonkey2.30:
--- → affected
status-seamonkey2.31:
--- → fixed
status-seamonkey2.32:
--- → fixed
Updated•11 years ago
|
Attachment #8440301 -
Flags: approval-comm-beta? → approval-comm-beta+
Comment 13•11 years ago
|
||
(In reply to Ian Neal from comment #12)
> Comment on attachment 8440301 [details] [diff] [review]
> patch
>
> [Approval Request Comment]
> Regression caused by (bug #): bug 177206
> User impact if declined: Address book sorting will not stick for SM release
> based on mail core 32.
> Testing completed (on c-c, etc.): on c-c and c-a
> Risk to taking this patch (and alternatives if risky): Low risk
This is already merged in comm-beta
https://hg.mozilla.org/releases/comm-beta/rev/903423ef59b8
Updated•11 years ago
|
status-thunderbird32:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•