Bug 1024130 - Address book sorting not sticky. r=Standard8